--- a/src/Organizer/Bundle/ClientBundle/Resources/public/scss/todo-package.scss
+++ b/src/Organizer/Bundle/ClientBundle/Resources/public/scss/todo-package.scss
@@ -15,16 +15,13 @@
     color: lightgrey;
     text-decoration: line-through;
   }
-  &.ng-leave {
-    -webkit-transition:0.5s linear all;
-    transition:0.5s linear all;
-  }
-  &.ng-leave {
-    opacity: 1;
-    height: 100%;
-    &.ng-leave-active {
-      opacity: 0;
-      height: 0;
-    }
-  }
+}
+
+.todo-leave {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
+
+.todo-leave.todo-leave-active {
+  opacity: 0.01;
 }
