--- a/src/Organizer/Bundle/ClientBundle/Resources/views/Default/index.html.twig
+++ b/src/Organizer/Bundle/ClientBundle/Resources/views/Default/index.html.twig
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="/bundles/organizerclient/js/node_modules/jquery/dist/jquery.min.js"></script>
-        <script type="text/javascript" src="/bundles/organizerclient/js/dist/1.0.0.Organizer.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/bundles/organizerclient/js/node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/bundles/organizerclient/css/dist/todo-package.css">
     </head>
     {% verbatim %}
-    <body ng-app="OrganizerApp" ng-cloak="" ng-controller="TodoController">
+    <body>
+        <div id="my-div"></div>
         <div class="container">
             <div class="jumbotron">
                 <h1>Organizer</h1>
@@ -16,36 +15,27 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <form name="todoCreateForm" ng-submit="addTodo()">
+                    <form name="todoCreateForm">
                         <div class="input-group input-group-lg standalone">
-                            <input type="text" ng-model="newTodo.title" class="form-control" placeholder="I need to..." required>
+                            <input type="text" class="form-control" placeholder="I need to..." required>
                             <span class="input-group-btn">
-                                <rb-async-button ng-model="addButton.isProcessing" class="btn btn-success" type="submit">
+                                <!--<rb-async-button ng-model="addButton.isProcessing" class="btn btn-success" type="submit">
                                     <span>
                                         <span class="glyphicon glyphicon-plus"></span>
                                         Add item
                                     </span>
-                                </rb-async-button>
+                                </rb-async-button>-->
                             </span>
                         </div>
                     </form>
 
-                    <ul class="input-group-list" ng-show="todos.length">
-                        <li class="input-group todo-item" ng-repeat="todo in todos">
-                            <span class="input-group-addon">
-                                <input id="todo-{{ todo.id }}" ng-model="todo.is_complete" type="checkbox">
-                            </span>
-                            <rb-editable-text ng-model="todo.title" id="todo-edit-{{ todo.id }}" ng-change="renameTodo(todo)"></rb-editable-text>
-                            <span class="input-group-addon">
-                                <button type="button" class="btn btn-danger btn-circular" ng-click="deleteTodo(todo.id)">
-                                    <span class="glyphicon glyphicon-remove icon-delete"></span>
-                                </button>
-                            </span>
-                        </li>
-                    </ul>
+                    <div id="todo-list"></div>
+
                 </div>
             </div>
         </div>
     </body>
+    <script type="text/javascript" src="/bundles/organizerclient/js/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/bundles/organizerclient/js/dist/1.0.0.Organizer.min.js"></script>
     {% endverbatim %}
 </html>
