Added react Started using dispatcher properly

--- a/src/Organizer/Bundle/ClientBundle/Resources/public/scss/todo-package.scss
+++ b/src/Organizer/Bundle/ClientBundle/Resources/public/scss/todo-package.scss
@@ -11,7 +11,7 @@
 }
 
 .todo-item {
-  .todo-item-complete {
+  &.todo-item-complete {
     color: lightgrey;
     text-decoration: line-through;
   }
