--- a/src/Organizer/Bundle/ClientBundle/Resources/views/Default/index.html.twig
+++ b/src/Organizer/Bundle/ClientBundle/Resources/views/Default/index.html.twig
@@ -15,20 +15,8 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <form name="todoCreateForm">
-                        <div class="input-group input-group-lg standalone">
-                            <input type="text" class="form-control" placeholder="I need to..." required>
-                            <span class="input-group-btn">
-                                <!--<rb-async-button ng-model="addButton.isProcessing" class="btn btn-success" type="submit">
-                                    <span>
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        Add item
-                                    </span>
-                                </rb-async-button>-->
-                            </span>
-                        </div>
-                    </form>
 
+                    <div id="todo-input"></div>
                     <div id="todo-list"></div>
 
                 </div>
